monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A0278/A0278e.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A0278;

grammar A0278e extends de.monticore.grammar.cocos.invalid.A0278.A0278a {

    interface D extends A;
    interface Z;

    X implements A = Z;
    Y = A;
}